--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"appainter_theme.json":["appainter_theme.json"],"categorias.json":["categorias.json"],"especial.json":["especial.json"],"estructuraymaterial.json":["estructuraymaterial.json"],"logo.png":["logo.png"],"materiales.json":["materiales.json"]}
+{"assets/appainter_theme.json":["assets/appainter_theme.json"],"assets/categorias.json":["assets/categorias.json"],"assets/especial.json":["assets/especial.json"],"assets/estructuraymaterial.json":["assets/estructuraymaterial.json"],"assets/logo.png":["assets/logo.png"],"assets/materiales.json":["assets/materiales.json"]}
